--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -461,150 +461,150 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 .bankerRoadIcon0 {
-  width: 45px;
-  height: 45px;
+  width: 35px;
+  height: 35px;
   background-position: 0px 0px;
-  background-size: 855px auto;
+  background-size: 665px auto;
 }
 
 .bankerRoadIcon1 {
-  width: 45px;
-  height: 45px;
-  background-position: -45px 0px;
-  background-size: 855px auto;
+  width: 35px;
+  height: 35px;
+  background-position: -35px 0px;
+  background-size: 665px auto;
 }
 
 .bankerRoadIcon2 {
-  width: 45px;
-  height: 45px;
-  background-position: -90px 0px;
-  background-size: 855px auto;
+  width: 35px;
+  height: 35px;
+  background-position: -70px 0px;
+  background-size: 665px auto;
 }
 
 .bankerRoadIcon3 {
-  width: 23px;
-  height: 23px;
-  background-position: -69px 0px;
-  background-size: 437px auto;
+  width: 19px;
+  height: 19px;
+  background-position: -57px 0px;
+  background-size: 361px auto;
 }
 
 .bankerRoadIcon3-1 {
-  width: 12px;
-  height: 12px;
-  background-position: -36px 0px;
-  background-size: 228px auto;
+  width: 11px;
+  height: 11px;
+  background-position: -33px 0px;
+  background-size: 209px auto;
 }
 
 .bankerRoadIcon4 {
-  width: 23px;
-  height: 23px;
-  background-position: -92px 0px;
-  background-size: 437px auto;
+  width: 19px;
+  height: 19px;
+  background-position: -76px 0px;
+  background-size: 361px auto;
 }
 
 .bankerRoadIcon5 {
-  width: 23px;
-  height: 23px;
-  background-position: -115px 0px;
-  background-size: 437px auto;
+  width: 19px;
+  height: 19px;
+  background-position: -95px 0px;
+  background-size: 361px auto;
 }
 
 .bankerRoadIcon6 {
-  width: 23px;
-  height: 23px;
-  background-position: -138px 0px;
-  background-size: 437px auto;
+  width: 19px;
+  height: 19px;
+  background-position: -114px 0px;
+  background-size: 361px auto;
 }
 
 .bankerRoadIcon7 {
-  width: 12px;
-  height: 12px;
-  background-position: -84px 0px;
-  background-size: 228px auto;
+  width: 10px;
+  height: 10px;
+  background-position: -70px 0px;
+  background-size: 190px auto;
 }
 
 .bankerRoadIcon8 {
-  width: 12px;
-  height: 12px;
-  background-position: -96px 0px;
-  background-size: 228px auto;
+  width: 10px;
+  height: 10px;
+  background-position: -80px 0px;
+  background-size: 190px auto;
 }
 
 .playerRoadIcon0 {
-  width: 45px;
-  height: 45px;
-  background-position: -405px 0px;
-  background-size: 855px auto;
+  width: 35px;
+  height: 35px;
+  background-position: -315px 0px;
+  background-size: 665px auto;
 }
 
 .playerRoadIcon1 {
-  width: 45px;
-  height: 45px;
-  background-position: -450px 0px;
-  background-size: 855px auto;
+  width: 35px;
+  height: 35px;
+  background-position: -350px 0px;
+  background-size: 665px auto;
 }
 
 .playerRoadIcon2 {
-  width: 45px;
-  height: 45px;
-  background-position: -495px 0px;
-  background-size: 855px auto;
+  width: 35px;
+  height: 35px;
+  background-position: -385px 0px;
+  background-size: 665px auto;
 }
 
 .playerRoadIcon3 {
-  width: 23px;
-  height: 23px;
-  background-position: -276px 0px;
-  background-size: 437px auto;
+  width: 19px;
+  height: 19px;
+  background-position: -228px 0px;
+  background-size: 361px auto;
 }
 
 .playerRoadIcon3-1 {
-  width: 12px;
-  height: 12px;
-  background-position: -144px 0px;
-  background-size: 228px auto;
+  width: 11px;
+  height: 11px;
+  background-position: -132px 0px;
+  background-size: 209px auto;
 }
 
 .playerRoadIcon4 {
-  width: 23px;
-  height: 23px;
-  background-position: -299px 0px;
-  background-size: 437px auto;
+  width: 19px;
+  height: 19px;
+  background-position: -247px 0px;
+  background-size: 361px auto;
 }
 
 .playerRoadIcon5 {
-  width: 23px;
-  height: 23px;
-  background-position: -322px 0px;
-  background-size: 437px auto;
+  width: 19px;
+  height: 19px;
+  background-position: -266px 0px;
+  background-size: 361px auto;
 }
 
 .playerRoadIcon6 {
-  width: 23px;
-  height: 23px;
-  background-position: -345px 0px;
-  background-size: 437px auto;
+  width: 19px;
+  height: 19px;
+  background-position: -285px 0px;
+  background-size: 361px auto;
 }
 
 .playerRoadIcon7 {
-  width: 12px;
-  height: 12px;
-  background-position: -192px 0px;
-  background-size: 228px auto;
+  width: 10px;
+  height: 10px;
+  background-position: -160px 0px;
+  background-size: 190px auto;
 }
 
 .playerRoadIcon8 {
-  width: 12px;
-  height: 12px;
-  background-position: -204px 0px;
-  background-size: 228px auto;
+  width: 10px;
+  height: 10px;
+  background-position: -170px 0px;
+  background-size: 190px auto;
 }
 
 .tieRoadIcon {
-  width: 45px;
-  height: 45px;
-  background-position: -810px 0px;
-  background-size: 855px auto;
+  width: 35px;
+  height: 35px;
+  background-position: -630px 0px;
+  background-size: 665px auto;
 }
 
 .LoadingPage {
@@ -670,6 +670,192 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .coinArea {
     height: 21%;
+  }
+  .coin-menu1 {
+    width: 63.2px;
+    height: 52px;
+    background-position: 0px 0px;
+    background-size: 316px 156px;
+  }
+  .coin-menu1:hover, .coin-menu1-current {
+    width: 63.2px;
+    height: 52px;
+    background-position: 0px -52px;
+    background-size: 316px 156px;
+  }
+  .coin-menu2 {
+    width: 63.2px;
+    height: 52px;
+    background-position: -63.2px 0px;
+    background-size: 316px 156px;
+  }
+  .coin-menu2:hover, .coin-menu2-current {
+    width: 63.2px;
+    height: 52px;
+    background-position: -63.2px -52px;
+    background-size: 316px 156px;
+  }
+  .coin-menu3 {
+    width: 63.2px;
+    height: 52px;
+    background-position: -126.4px 0px;
+    background-size: 316px 156px;
+  }
+  .coin-menu3:hover, .coin-menu3-current {
+    width: 63.2px;
+    height: 52px;
+    background-position: -126.4px -52px;
+    background-size: 316px 156px;
+  }
+  .coin-menu4 {
+    width: 63.2px;
+    height: 52px;
+    background-position: -189.6px 0px;
+    background-size: 316px 156px;
+  }
+  .coin-menu4:hover, .coin-menu4-current {
+    width: 63.2px;
+    height: 52px;
+    background-position: -189.6px -52px;
+    background-size: 316px 156px;
+  }
+  .coin-menu5 {
+    width: 63.2px;
+    height: 52px;
+    background-position: -252.8px 0px;
+    background-size: 316px 156px;
+  }
+  .coin-menu5:hover, .coin-menu5-current {
+    width: 63.2px;
+    height: 52px;
+    background-position: -252.8px -52px;
+    background-size: 316px 156px;
+  }
+  .bankerRoadIcon0 {
+    width: 29px;
+    height: 29px;
+    background-position: 0px 0px;
+    background-size: 551px auto;
+  }
+  .bankerRoadIcon1 {
+    width: 29px;
+    height: 29px;
+    background-position: -29px 0px;
+    background-size: 551px auto;
+  }
+  .bankerRoadIcon2 {
+    width: 29px;
+    height: 29px;
+    background-position: -58px 0px;
+    background-size: 551px auto;
+  }
+  .bankerRoadIcon3 {
+    width: 15px;
+    height: 15px;
+    background-position: -45px 0px;
+    background-size: 285px auto;
+  }
+  .bankerRoadIcon3-1 {
+    width: 9px;
+    height: 9px;
+    background-position: -27px 0px;
+    background-size: 171px auto;
+  }
+  .bankerRoadIcon4 {
+    width: 15px;
+    height: 15px;
+    background-position: -60px 0px;
+    background-size: 285px auto;
+  }
+  .bankerRoadIcon5 {
+    width: 15px;
+    height: 15px;
+    background-position: -75px 0px;
+    background-size: 285px auto;
+  }
+  .bankerRoadIcon6 {
+    width: 15px;
+    height: 15px;
+    background-position: -90px 0px;
+    background-size: 285px auto;
+  }
+  .bankerRoadIcon7 {
+    width: 8px;
+    height: 8px;
+    background-position: -56px 0px;
+    background-size: 152px auto;
+  }
+  .bankerRoadIcon8 {
+    width: 8px;
+    height: 8px;
+    background-position: -64px 0px;
+    background-size: 152px auto;
+  }
+  .playerRoadIcon0 {
+    width: 29px;
+    height: 29px;
+    background-position: -261px 0px;
+    background-size: 551px auto;
+  }
+  .playerRoadIcon1 {
+    width: 29px;
+    height: 29px;
+    background-position: -290px 0px;
+    background-size: 551px auto;
+  }
+  .playerRoadIcon2 {
+    width: 29px;
+    height: 29px;
+    background-position: -319px 0px;
+    background-size: 551px auto;
+  }
+  .playerRoadIcon3 {
+    width: 15px;
+    height: 15px;
+    background-position: -180px 0px;
+    background-size: 285px auto;
+  }
+  .playerRoadIcon3-1 {
+    width: 9px;
+    height: 9px;
+    background-position: -108px 0px;
+    background-size: 171px auto;
+  }
+  .playerRoadIcon4 {
+    width: 15px;
+    height: 15px;
+    background-position: -195px 0px;
+    background-size: 285px auto;
+  }
+  .playerRoadIcon5 {
+    width: 15px;
+    height: 15px;
+    background-position: -210px 0px;
+    background-size: 285px auto;
+  }
+  .playerRoadIcon6 {
+    width: 15px;
+    height: 15px;
+    background-position: -225px 0px;
+    background-size: 285px auto;
+  }
+  .playerRoadIcon7 {
+    width: 8px;
+    height: 8px;
+    background-position: -128px 0px;
+    background-size: 152px auto;
+  }
+  .playerRoadIcon8 {
+    width: 8px;
+    height: 8px;
+    background-position: -136px 0px;
+    background-size: 152px auto;
+  }
+  .tieRoadIcon {
+    width: 29px;
+    height: 29px;
+    background-position: -522px 0px;
+    background-size: 551px auto;
   }
 }
 
