--- a/src/assets/css/scss/base/_variable.scss
+++ b/src/assets/css/scss/base/_variable.scss
@@ -13,4 +13,6 @@ $loading-img:url('../../images/loading.svg');
 $coin-spriteImg:url('../../images/coin.png');
 //路圖序列圖
 $historyRoad-spriteImg:url('../../images/road-sprite.png');
+//卡排序列圖
+$poker-spriteImg:url('../../images/poker.png')
 
