--- a/src/assets/css/scss/components/_poker.scss
+++ b/src/assets/css/scss/components/_poker.scss
@@ -1,5 +1,5 @@
 .poker{ //顯示卡牌
-    background-image:url('../../images/poker.png');
+    background-image:$poker-spriteImg;
   }
   .card-item-w{
     transform: rotate(90deg);
