--- a/src/assets/css/scss/layout/_grid.scss
+++ b/src/assets/css/scss/layout/_grid.scss
@@ -34,7 +34,7 @@
 	align-items: center;
 	color: white;
 	font-size: 2rem;
-	border: 1px solid #FFF;
+	border: 1px solid gray;
 	text-align: center;
 	line-height: 1.55em;
 }
