--- a/src/assets/css/scss/layout/_mainGame.scss
+++ b/src/assets/css/scss/layout/_mainGame.scss
@@ -94,27 +94,39 @@
 
 //遊戲結果
 .gameResult{
-	left:50%;
-	top:50%;
-	transform: translate(-50%,-50%);
-	background-color: #1E1101;
+	top:0;
+	left:0;
+	background-color: #1e1101d0;
 	border:2px solid #654d31;
 	box-shadow: 5px 5px black;
 	text-align: center;
 	animation-name:fade;
-	animation-duration: 0.5s;
+	animation-duration: 0.2s;
 	animation-timing-function: linear;
 }
 @keyframes fade {
 	from{
-		transform: translate(-50%,-50%) scale(0.5);
+		transform:scale(0.5);
 		opacity: 0;
 		
 	}to{
-		transform: translate(-50%,-50%) scale(1);
+		transform:scale(1);
 		opacity: 1;
 	}
 }
 .result-text{
-	font-size: 2rem;
+	font-size: 200%;
+}
+.gameResult-title{
+	border-bottom: 1px #654d31 solid;
+	height:20%;
+	font-size: 150%;
+	@include flex-colum-content-center;
+	p{
+		margin: 0;
+	}
+}
+.gameResult-content{
+	@include flex-colum-content-center;
+	height:80%;
 }
