--- a/src/assets/css/scss/util/_util.scss
+++ b/src/assets/css/scss/util/_util.scss
@@ -7,6 +7,11 @@
     justify-content: space-evenly;
     align-items: center;
 }
+@mixin flex-colum-content-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
 
 @mixin hisRoadSpritePosition($x,$y,$scale){
     $WIDTH:(100*$scale);
