--- a/src/assets/css/scss/components/_loading.scss
+++ b/src/assets/css/scss/components/_loading.scss
@@ -3,3 +3,8 @@
     background-color: #644d31;
     text-align: center;
 }
+.gameResultLoading{
+    background-image: $loading-img;
+    background-repeat: no-repeat;
+    background-position: center center;
+}
