--- a/src/assets/css/scss/components/_historyRoad.scss
+++ b/src/assets/css/scss/components/_historyRoad.scss
@@ -1,4 +1,7 @@
 //路圖圖示區
+.roadImg-preLoad {
+    @extend %hisRoad;
+}
 .bankerRoadIcon0{
     @extend %hisRoad;
     @include hisRoadSpritePosition(0,0,0.35);
