//修改計時器顯示數字，個位數小於10前面補0；vu. e93

--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -16,7 +16,7 @@
 @import './scss/components/historyRoad';
 @import './scss//components/loading';
 @import './scss/components/poker';
-
+@import './scss/components//counter';
 //rwd
 @import './scss/rwd/rwd';
 	
