--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -702,6 +702,28 @@ a.btn.disabled, fieldset[disabled] a.btn {
           transform: rotate(90deg);
 }
 
+.counter {
+  z-index: 1;
+}
+
+#countNumber {
+  top: 1%;
+  font-size: 4.8rem;
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  display: none;
+}
+
+#loading {
+  display: none;
+  border: 4px solid;
+  border-color: transparent transparent #724a0a #9b7726;
+  background-color: rgba(128, 128, 128, 0.507);
+  width: 110px;
+  height: 110px;
+  border-radius: 50%;
+}
+
 /*-------------------------------------------
      自適應設定區
 -------------------------------------------*/
@@ -1218,6 +1240,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .lightBox {
     display: block;
   }
+  #countNumber {
+    top: 2%;
+  }
   .betArea-mobile {
     height: 180px;
   }
@@ -1239,7 +1264,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
     padding-bottom: 0px;
   }
   .betArea-item {
-    font-size: 2rem;
+    font-size: 1.6rem;
   }
   .bankerRoadIcon0 {
     width: 30px;
@@ -1343,6 +1368,12 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .video-box {
     height: 288px;
+  }
+  #countNumber {
+    top: 3%;
+  }
+  .betArea-item, .betStatus {
+    font-size: 1.5rem;
   }
   .betArea-mobile, .betArea-mobile-container {
     height: 130px;
@@ -1550,6 +1581,15 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .video-box {
     height: 220px;
   }
+  #countNumber {
+    top: 2%;
+    font-size: 2.6rem;
+  }
+  #loading {
+    width: 60px;
+    height: 60px;
+    left: 10px;
+  }
   .betArea {
     height: 300px;
   }
@@ -1636,14 +1676,15 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .gameHistory {
     height: 115px;
   }
-  #loading {
-    width: 60px;
-    height: 60px;
-    left: 10px;
+  .gameResult {
+    top: 25%;
   }
-  #countNumber {
-    font-size: 2.6rem;
-    top: 2px;
+  .gainMoney {
+    font-size: 100%;
+    margin-bottom: 0;
+  }
+  .result-text {
+    font-size: 150%;
   }
 }
 
@@ -1659,6 +1700,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .betArea-mobile-container {
     height: 179px;
+  }
+  .gameResult {
+    top: 20%;
   }
 }
 
@@ -1680,6 +1724,12 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .gameHistory {
     height: 100px;
+  }
+  .gainMoney {
+    font-size: 80%;
+  }
+  .result-text {
+    font-size: 130%;
   }
   .betArea {
     height: 235px;
