//API串接:串接獲得金錢

--- a/src/assets/css/scss/components/_counter.scss
+++ b/src/assets/css/scss/components/_counter.scss
@@ -5,6 +5,7 @@
 }
 #countNumber{
     top:1%;
+    left:-6px;
     font-size: 4.8rem;
     font-family: Arial, Helvetica, sans-serif;
     color:white;
