--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -708,6 +708,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
 
 #countNumber {
   top: 1%;
+  left: -6px;
   font-size: 4.8rem;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
@@ -1583,6 +1584,7 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   #countNumber {
     top: 2%;
+    left: 0;
     font-size: 2.6rem;
   }
   #loading {
@@ -1714,6 +1716,11 @@ a.btn.disabled, fieldset[disabled] a.btn {
     width: 24%;
     line-height: 1rem;
     font-size: 100%;
+  }
+  #countNumber {
+    top: 3%;
+    left: 1px;
+    font-size: 2.5rem;
   }
   .footer {
     padding-top: 0px;
