--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -529,6 +529,7 @@
 		}
 		#countNumber{
 			top:2%;
+			left:0;
 			font-size: 2.6rem;
 		}
 		#loading{
@@ -626,6 +627,11 @@
 		line-height:1rem;
 		font-size:100%;
 	}
+	#countNumber{
+		top:3%;
+		left:1px;
+		font-size: 2.5rem;
+	}
 	.footer{
 		padding-top:0px;
 		padding-bottom: 0px;
@@ -681,19 +687,4 @@
 	.coin-menu5:hover,.coin-menu5-current{
 		@include coinSpritePosition(-316,-65,0.7)
 	}
-	// .ammo5{
-	// 	left:-130px !important;
-	// }
-	// .ammo10{
-	// 	left:-80px !important;
-	// }
-	// .ammo50{
-	// 	left:-20px !important;
-	// }
-	// .ammo100{
-	// 	left:30px !important;
-	// }
-	// .ammo500{
-	//    left:80px !important;
-	// }
 }	
