--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -13,6 +13,7 @@
 //component
 @import './scss/components/buttom';
 @import './scss/components/coin';
+@import './scss/components/bettingArea';
 @import './scss/components/historyRoad';
 @import './scss//components/loading';
 @import './scss/components/poker';
