--- a/src/assets/css/scss/components/_bettingArea.scss
+++ b/src/assets/css/scss/components/_bettingArea.scss
@@ -6,6 +6,8 @@
         left:50%;
         transform: translate(-50%,-50%);
         text-align: center;
+        @include flex-justify-method(space-between);
+        flex-direction: column;
         li{
             color:red;
             font-size: larger;
