--- a/src/assets/css/scss/components/_counter.scss
+++ b/src/assets/css/scss/components/_counter.scss
@@ -5,7 +5,8 @@
 }
 #countNumber{
     top:1%;
-    left:-6px;
+    left:10px;
+    // left:-6px;
     font-size: 4.8rem;
     font-family: Arial, Helvetica, sans-serif;
     color:white;
