--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -1711,6 +1711,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .betArea {
     height: 300px;
   }
+  .betStatus {
+    font-size: 1.2rem;
+  }
   .betArea-mobile {
     height: 211px;
   }
@@ -1813,6 +1816,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
   .betArea {
     height: 260px;
   }
+  .betStatus {
+    font-size: 1.1rem;
+  }
   .betArea-mobile {
     height: 179px;
   }
@@ -1856,6 +1862,12 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .betArea {
     height: 235px;
+  }
+  .betArea-item {
+    font-size: 1rem;
+  }
+  .betStatus {
+    font-size: 1rem;
   }
   .betArea-mobile {
     height: 160px;
