--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -347,8 +347,14 @@
 		padding-top: 0px;
 		padding-bottom: 0px;
 	}
+	.betArea-mobile,.betArea-mobile-container{
+		height:145px;
+	}
 	.betArea-item {
 		font-size: 1.6rem;
+	}
+	.card-container{
+		margin-top: -35px;
 	}
 	.bankerRoadIcon0{
 		@include hisRoadSpritePosition(0,0,0.3);
@@ -512,8 +518,9 @@
 	.tieRoadIcon{
 		@include hisRoadSpritePosition(-1800,0,0.15);
 	}
-
-
+	.card-container{
+		margin-top: -10px;
+	}
 }
 @media screen and (max-width: 414px) {
 		.header{
@@ -583,6 +590,9 @@
 		}
 		.coin-menu5:hover,.coin-menu5-current{
 			@include coinSpritePosition(-316,-65,0.9)
+		}
+		.card-container{
+			margin-top: -25px;
 		}
 		.caritem{
 			margin-right: 10px;
@@ -698,5 +708,8 @@
 	}
 	.coin-menu5:hover,.coin-menu5-current{
 		@include coinSpritePosition(-316,-65,0.7)
+	}
+	.card-container{
+		margin-top: -35px;
 	}
 }	
