--- a/src/assets/css/all.scss
+++ b/src/assets/css/all.scss
@@ -14,6 +14,7 @@
 @import './scss/components/buttom';
 @import './scss/components/coin';
 @import './scss/components/bettingArea';
+@import './scss//components/gameResult';
 @import './scss/components/historyRoad';
 @import './scss//components/loading';
 @import './scss/components/poker';
