--- a/src/assets/css/all.css
+++ b/src/assets/css/all.css
@@ -863,6 +863,12 @@ a.btn.disabled, fieldset[disabled] a.btn {
 }
 
 @media screen and (max-width: 1280px) {
+  .text-md-left, .text-md-right {
+    font-size: smaller;
+  }
+  .card-container {
+    margin-top: -20px;
+  }
   .video-box {
     height: 75%;
   }
@@ -1116,6 +1122,9 @@ a.btn.disabled, fieldset[disabled] a.btn {
   }
   .mainGame {
     width: 100%;
+  }
+  .card-container {
+    margin-top: 0px;
   }
   .betArea {
     border: 2px solid #262626;
