--- a/src/assets/css/scss/rwd/_rwd.scss
+++ b/src/assets/css/scss/rwd/_rwd.scss
@@ -25,6 +25,12 @@
 	}
 }
 @media screen and (max-width: 1280px) {
+	.text-md-left,.text-md-right{
+		font-size: smaller;
+	}
+	.card-container{
+		margin-top:-20px;
+	}
 	.video-box{
 		height:75%;
 	}
@@ -141,8 +147,7 @@
 	}
 }
 @media screen and (max-width: 1140px) {
-
-
+	
 }
 @media screen and (max-width: 1024px) {
 	.container-waps{
@@ -186,6 +191,9 @@
 	.mainGame{
 		width: 100%;
 	}	
+	.card-container{
+		margin-top:0px;
+	}
 	.betArea{
 		border: 2px solid #262626;
 		width: 100%;
